--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -35,7 +35,12 @@
     "edit": "Edit",
     "delete": "Delete",
     "delete_connection": "Delete Connection",
-    "confirm_delete_connection": "Are you sure you want to delete the connection \"{{name}}\"?"
+    "confirm_delete_connection": "Are you sure you want to delete the connection \"{{name}}\"?",
+    "confirm_delete": "Are you sure you want to delete this item?",
+    "search": "Search",
+    "no_results": "No results found",
+    "error_loading_snippets": "Error loading snippets",
+    "deleted_success": "Deleted successfully"
   },
   "splash": {
     "starting": "Starting...",
@@ -221,6 +226,7 @@
     "command_required": "Please enter a command",
     "save_tip": "Tip: Use Ctrl+Enter to save quickly",
     "snippet_updated": "Snippet updated successfully",
-    "snippet_created": "Snippet created successfully"
+    "snippet_created": "Snippet created successfully",
+    "executing": "Executing snippet: {{name}}"
   }
 }
