basic docker dashboard

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -35,7 +35,8 @@
     "edit": "Bearbeiten",
     "delete": "Löschen",
     "delete_connection": "Verbindung löschen",
-    "confirm_delete_connection": "Möchten Sie die Verbindung \"{{name}}\" wirklich löschen?"
+    "confirm_delete_connection": "Möchten Sie die Verbindung \"{{name}}\" wirklich löschen?",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "Starten...",
@@ -222,5 +223,56 @@
     "save_tip": "Tipp: Verwenden Sie Strg+Enter zum schnellen Speichern",
     "snippet_updated": "Snippet erfolgreich aktualisiert",
     "snippet_created": "Snippet erfolgreich erstellt"
+  },
+  "docker": {
+    "select_connection": "Verbindung auswählen",
+    "select_connection_desc": "Wählen Sie eine Verbindung, um Docker-Container anzuzeigen.",
+    "not_available": "Docker nicht verfügbar",
+    "not_available_desc": "Docker ist auf diesem Server nicht installiert oder nicht zugänglich.",
+    "containers": "Container",
+    "container_name": "Name",
+    "image": "Image",
+    "status": "Status",
+    "ports": "Ports",
+    "created": "Erstellt",
+    "actions": "Aktionen",
+    "total_containers": "Container gesamt",
+    "running": "Laufend",
+    "stopped": "Gestoppt",
+    "start": "Starten",
+    "stop": "Stoppen",
+    "restart": "Neustart",
+    "remove": "Entfernen",
+    "start_success": "Container erfolgreich gestartet",
+    "stop_success": "Container erfolgreich gestoppt",
+    "restart_success": "Container erfolgreich neu gestartet",
+    "remove_success": "Container erfolgreich entfernt",
+    "start_error": "Fehler beim Starten des Containers: {{message}}",
+    "stop_error": "Fehler beim Stoppen des Containers: {{message}}",
+    "restart_error": "Fehler beim Neustart des Containers: {{message}}",
+    "remove_error": "Fehler beim Entfernen des Containers: {{message}}",
+    "remove_confirm_title": "Container entfernen",
+    "remove_confirm_content": "Möchten Sie den Container \"{{name}}\" wirklich entfernen?",
+    "loading_containers": "Container werden geladen...",
+    "no_containers": "Keine Container gefunden",
+    "load_error": "Fehler beim Laden der Container",
+    "images": "Images",
+    "total_images": "Gesamtzahl Images",
+    "repository": "Repository",
+    "tag": "Tag",
+    "image_id": "Image ID",
+    "size": "Größe",
+    "loading_images": "Images werden geladen...",
+    "no_images": "Keine Images gefunden",
+    "images_load_error": "Fehler beim Laden der Images",
+    "image_remove_success": "Image erfolgreich entfernt",
+    "image_remove_error": "Fehler beim Entfernen des Images: {{message}}",
+    "image_remove_confirm_title": "Image entfernen",
+    "image_remove_confirm_content": "Möchten Sie das Image \"{{name}}\" wirklich entfernen?",
+    "logs": "Protokolle",
+    "logs_title": "Protokolle - {{name}}",
+    "logs_loading": "Protokolle werden geladen...",
+    "logs_empty": "Keine Protokolle verfügbar",
+    "logs_error": "Fehler beim Laden der Protokolle"
   }
 }
