--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -40,7 +40,8 @@
     "search": "Search",
     "no_results": "No results found",
     "error_loading_snippets": "Error loading snippets",
-    "deleted_success": "Deleted successfully"
+    "deleted_success": "Deleted successfully",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "Starting...",
@@ -231,5 +232,56 @@
     "snippet_updated": "Snippet updated successfully",
     "snippet_created": "Snippet created successfully",
     "executing": "Executing snippet: {{name}}"
+  },
+  "docker": {
+    "select_connection": "Select a connection",
+    "select_connection_desc": "Select a connection to view Docker containers.",
+    "not_available": "Docker not available",
+    "not_available_desc": "Docker is not installed or not accessible on this server.",
+    "containers": "Containers",
+    "container_name": "Name",
+    "image": "Image",
+    "status": "Status",
+    "ports": "Ports",
+    "created": "Created",
+    "actions": "Actions",
+    "total_containers": "Total Containers",
+    "running": "Running",
+    "stopped": "Stopped",
+    "start": "Start",
+    "stop": "Stop",
+    "restart": "Restart",
+    "remove": "Remove",
+    "start_success": "Container started successfully",
+    "stop_success": "Container stopped successfully",
+    "restart_success": "Container restarted successfully",
+    "remove_success": "Container removed successfully",
+    "start_error": "Error starting container: {{message}}",
+    "stop_error": "Error stopping container: {{message}}",
+    "restart_error": "Error restarting container: {{message}}",
+    "remove_error": "Error removing container: {{message}}",
+    "remove_confirm_title": "Remove Container",
+    "remove_confirm_content": "Are you sure you want to remove the container \"{{name}}\"?",
+    "loading_containers": "Loading containers...",
+    "no_containers": "No containers found",
+    "load_error": "Error loading containers",
+    "images": "Images",
+    "total_images": "Total Images",
+    "repository": "Repository",
+    "tag": "Tag",
+    "image_id": "Image ID",
+    "size": "Size",
+    "loading_images": "Loading images...",
+    "no_images": "No images found",
+    "images_load_error": "Error loading images",
+    "image_remove_success": "Image removed successfully",
+    "image_remove_error": "Error removing image: {{message}}",
+    "image_remove_confirm_title": "Remove Image",
+    "image_remove_confirm_content": "Are you sure you want to remove the image \"{{name}}\"?",
+    "logs": "Logs",
+    "logs_title": "Logs - {{name}}",
+    "logs_loading": "Loading logs...",
+    "logs_empty": "No logs available",
+    "logs_error": "Error loading logs"
   }
 }
