--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -40,7 +40,8 @@
     "search": "Buscar",
     "no_results": "No se encontraron resultados",
     "error_loading_snippets": "Error al cargar snippets",
-    "deleted_success": "Eliminado con éxito"
+    "deleted_success": "Eliminado con éxito",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "Iniciando...",
@@ -228,5 +229,56 @@
     "snippet_updated": "Fragmento actualizado con éxito",
     "snippet_created": "Fragmento creado con éxito",
     "executing": "Ejecutando fragmento: {{name}}"
+  },
+  "docker": {
+    "select_connection": "Seleccione una conexión",
+    "select_connection_desc": "Seleccione una conexión para ver los contenedores Docker.",
+    "not_available": "Docker no disponible",
+    "not_available_desc": "Docker no está instalado o no es accesible en este servidor.",
+    "containers": "Contenedores",
+    "container_name": "Nombre",
+    "image": "Imagen",
+    "status": "Estado",
+    "ports": "Puertos",
+    "created": "Creado",
+    "actions": "Acciones",
+    "total_containers": "Total de Contenedores",
+    "running": "En Ejecución",
+    "stopped": "Detenidos",
+    "start": "Iniciar",
+    "stop": "Detener",
+    "restart": "Reiniciar",
+    "remove": "Eliminar",
+    "start_success": "Contenedor iniciado con éxito",
+    "stop_success": "Contenedor detenido con éxito",
+    "restart_success": "Contenedor reiniciado con éxito",
+    "remove_success": "Contenedor eliminado con éxito",
+    "start_error": "Error al iniciar contenedor: {{message}}",
+    "stop_error": "Error al detener contenedor: {{message}}",
+    "restart_error": "Error al reiniciar contenedor: {{message}}",
+    "remove_error": "Error al eliminar contenedor: {{message}}",
+    "remove_confirm_title": "Eliminar Contenedor",
+    "remove_confirm_content": "¿Está seguro de que desea eliminar el contenedor \"{{name}}\"?",
+    "loading_containers": "Cargando contenedores...",
+    "no_containers": "No se encontraron contenedores",
+    "load_error": "Error al cargar contenedores",
+    "images": "Imágenes",
+    "total_images": "Total de Imágenes",
+    "repository": "Repositorio",
+    "tag": "Etiqueta",
+    "image_id": "ID de Imagen",
+    "size": "Tamaño",
+    "loading_images": "Cargando imágenes...",
+    "no_images": "No se encontraron imágenes",
+    "images_load_error": "Error al cargar imágenes",
+    "image_remove_success": "Imagen eliminada correctamente",
+    "image_remove_error": "Error al eliminar imagen: {{message}}",
+    "image_remove_confirm_title": "Eliminar Imagen",
+    "image_remove_confirm_content": "¿Está seguro de que desea eliminar la imagen \"{{name}}\"?",
+    "logs": "Registros",
+    "logs_title": "Registros - {{name}}",
+    "logs_loading": "Cargando registros...",
+    "logs_empty": "No hay registros disponibles",
+    "logs_error": "Error al cargar registros"
   }
 }
