--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -35,7 +35,8 @@
     "edit": "Modifier",
     "delete": "Supprimer",
     "delete_connection": "Supprimer Connexion",
-    "confirm_delete_connection": "Êtes-vous sûr de vouloir supprimer la connexion \"{{name}}\" ?"
+    "confirm_delete_connection": "Êtes-vous sûr de vouloir supprimer la connexion \"{{name}}\" ?",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "Démarrage...",
@@ -222,5 +223,56 @@
     "save_tip": "Conseil : Utilisez Ctrl+Entrée pour enregistrer rapidement",
     "snippet_updated": "Extrait mis à jour avec succès",
     "snippet_created": "Extrait créé avec succès"
+  },
+  "docker": {
+    "select_connection": "Sélectionnez une connexion",
+    "select_connection_desc": "Sélectionnez une connexion pour voir les conteneurs Docker.",
+    "not_available": "Docker non disponible",
+    "not_available_desc": "Docker n'est pas installé ou n'est pas accessible sur ce serveur.",
+    "containers": "Conteneurs",
+    "container_name": "Nom",
+    "image": "Image",
+    "status": "Statut",
+    "ports": "Ports",
+    "created": "Créé",
+    "actions": "Actions",
+    "total_containers": "Total des Conteneurs",
+    "running": "En cours",
+    "stopped": "Arrêtés",
+    "start": "Démarrer",
+    "stop": "Arrêter",
+    "restart": "Redémarrer",
+    "remove": "Supprimer",
+    "start_success": "Conteneur démarré avec succès",
+    "stop_success": "Conteneur arrêté avec succès",
+    "restart_success": "Conteneur redémarré avec succès",
+    "remove_success": "Conteneur supprimé avec succès",
+    "start_error": "Erreur lors du démarrage du conteneur : {{message}}",
+    "stop_error": "Erreur lors de l'arrêt du conteneur : {{message}}",
+    "restart_error": "Erreur lors du redémarrage du conteneur : {{message}}",
+    "remove_error": "Erreur lors de la suppression du conteneur : {{message}}",
+    "remove_confirm_title": "Supprimer le Conteneur",
+    "remove_confirm_content": "Êtes-vous sûr de vouloir supprimer le conteneur \"{{name}}\" ?",
+    "loading_containers": "Chargement des conteneurs...",
+    "no_containers": "Aucun conteneur trouvé",
+    "load_error": "Erreur lors du chargement des conteneurs",
+    "images": "Images",
+    "total_images": "Total des Images",
+    "repository": "Dépôt",
+    "tag": "Tag",
+    "image_id": "ID Image",
+    "size": "Taille",
+    "loading_images": "Chargement des images...",
+    "no_images": "Aucune image trouvée",
+    "images_load_error": "Erreur lors du chargement des images",
+    "image_remove_success": "Image supprimée avec succès",
+    "image_remove_error": "Erreur lors de la suppression de l'image : {{message}}",
+    "image_remove_confirm_title": "Supprimer l'Image",
+    "image_remove_confirm_content": "Êtes-vous sûr de vouloir supprimer l'image \"{{name}}\" ?",
+    "logs": "Journaux",
+    "logs_title": "Journaux - {{name}}",
+    "logs_loading": "Chargement des journaux...",
+    "logs_empty": "Aucun journal disponible",
+    "logs_error": "Erreur lors du chargement des journaux"
   }
 }
