--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -35,7 +35,8 @@
     "edit": "Modifica",
     "delete": "Elimina",
     "delete_connection": "Elimina Connessione",
-    "confirm_delete_connection": "Sei sicuro di voler eliminare la connessione \"{{name}}\"?"
+    "confirm_delete_connection": "Sei sicuro di voler eliminare la connessione \"{{name}}\"?",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "Avvio...",
@@ -222,5 +223,56 @@
     "save_tip": "Suggerimento: Usa Ctrl+Invio per salvare velocemente",
     "snippet_updated": "Frammento aggiornato con successo",
     "snippet_created": "Frammento creato con successo"
+  },
+  "docker": {
+    "select_connection": "Seleziona una connessione",
+    "select_connection_desc": "Seleziona una connessione per visualizzare i container Docker.",
+    "not_available": "Docker non disponibile",
+    "not_available_desc": "Docker non è installato o non è accessibile su questo server.",
+    "containers": "Container",
+    "container_name": "Nome",
+    "image": "Immagine",
+    "status": "Stato",
+    "ports": "Porte",
+    "created": "Creato",
+    "actions": "Azioni",
+    "total_containers": "Container Totali",
+    "running": "In esecuzione",
+    "stopped": "Fermati",
+    "start": "Avvia",
+    "stop": "Ferma",
+    "restart": "Riavvia",
+    "remove": "Rimuovi",
+    "start_success": "Container avviato con successo",
+    "stop_success": "Container fermato con successo",
+    "restart_success": "Container riavviato con successo",
+    "remove_success": "Container rimosso con successo",
+    "start_error": "Errore nell'avvio del container: {{message}}",
+    "stop_error": "Errore nell'arresto del container: {{message}}",
+    "restart_error": "Errore nel riavvio del container: {{message}}",
+    "remove_error": "Errore nella rimozione del container: {{message}}",
+    "remove_confirm_title": "Rimuovi Container",
+    "remove_confirm_content": "Sei sicuro di voler rimuovere il container \"{{name}}\"?",
+    "loading_containers": "Caricamento container...",
+    "no_containers": "Nessun container trovato",
+    "load_error": "Errore nel caricamento dei container",
+    "images": "Immagini",
+    "total_images": "Immagini Totali",
+    "repository": "Repository",
+    "tag": "Tag",
+    "image_id": "ID Immagine",
+    "size": "Dimensione",
+    "loading_images": "Caricamento immagini...",
+    "no_images": "Nessuna immagine trovata",
+    "images_load_error": "Errore nel caricamento delle immagini",
+    "image_remove_success": "Immagine rimossa con successo",
+    "image_remove_error": "Errore nella rimozione dell'immagine: {{message}}",
+    "image_remove_confirm_title": "Rimuovi Immagine",
+    "image_remove_confirm_content": "Sei sicuro di voler rimuovere l'immagine \"{{name}}\"?",
+    "logs": "Log",
+    "logs_title": "Log - {{name}}",
+    "logs_loading": "Caricamento log...",
+    "logs_empty": "Nessun log disponibile",
+    "logs_error": "Errore nel caricamento dei log"
   }
 }
