--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -35,7 +35,8 @@
     "edit": "編集",
     "delete": "削除",
     "delete_connection": "接続を削除",
-    "confirm_delete_connection": "接続「{{name}}」を削除してもよろしいですか？"
+    "confirm_delete_connection": "接続「{{name}}」を削除してもよろしいですか？",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "起動中...",
@@ -222,5 +223,56 @@
     "save_tip": "ヒント: Ctrl+Enterで素早く保存",
     "snippet_updated": "スニペットを更新しました",
     "snippet_created": "スニペットを作成しました"
+  },
+  "docker": {
+    "select_connection": "接続を選択",
+    "select_connection_desc": "Dockerコンテナを表示するには接続を選択してください。",
+    "not_available": "Dockerが利用できません",
+    "not_available_desc": "Dockerはこのサーバーにインストールされていないか、アクセスできません。",
+    "containers": "コンテナ",
+    "container_name": "名前",
+    "image": "イメージ",
+    "status": "ステータス",
+    "ports": "ポート",
+    "created": "作成日",
+    "actions": "アクション",
+    "total_containers": "コンテナ合計",
+    "running": "実行中",
+    "stopped": "停止中",
+    "start": "開始",
+    "stop": "停止",
+    "restart": "再起動",
+    "remove": "削除",
+    "start_success": "コンテナを開始しました",
+    "stop_success": "コンテナを停止しました",
+    "restart_success": "コンテナを再起動しました",
+    "remove_success": "コンテナを削除しました",
+    "start_error": "コンテナ開始エラー: {{message}}",
+    "stop_error": "コンテナ停止エラー: {{message}}",
+    "restart_error": "コンテナ再起動エラー: {{message}}",
+    "remove_error": "コンテナ削除エラー: {{message}}",
+    "remove_confirm_title": "コンテナを削除",
+    "remove_confirm_content": "コンテナ「{{name}}」を削除してもよろしいですか？",
+    "loading_containers": "コンテナを読み込み中...",
+    "no_containers": "コンテナが見つかりません",
+    "load_error": "コンテナの読み込みエラー",
+    "images": "イメージ",
+    "total_images": "イメージ合計",
+    "repository": "リポジトリ",
+    "tag": "タグ",
+    "image_id": "イメージID",
+    "size": "サイズ",
+    "loading_images": "イメージを読み込み中...",
+    "no_images": "イメージが見つかりません",
+    "images_load_error": "イメージの読み込みエラー",
+    "image_remove_success": "イメージを削除しました",
+    "image_remove_error": "イメージ削除エラー: {{message}}",
+    "image_remove_confirm_title": "イメージを削除",
+    "image_remove_confirm_content": "イメージ「{{name}}」を削除してもよろしいですか？",
+    "logs": "ログ",
+    "logs_title": "ログ - {{name}}",
+    "logs_loading": "ログを読み込み中...",
+    "logs_empty": "ログがありません",
+    "logs_error": "ログの読み込みエラー"
   }
 }
