--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -35,7 +35,8 @@
     "edit": "편집",
     "delete": "삭제",
     "delete_connection": "연결 삭제",
-    "confirm_delete_connection": "연결 \"{{name}}\"을(를) 삭제하시겠습니까?"
+    "confirm_delete_connection": "연결 \"{{name}}\"을(를) 삭제하시겠습니까?",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "시작 중...",
@@ -222,5 +223,56 @@
     "save_tip": "팁: Ctrl+Enter로 빠르게 저장",
     "snippet_updated": "스니펫이 업데이트되었습니다",
     "snippet_created": "스니펫이 생성되었습니다"
+  },
+  "docker": {
+    "select_connection": "연결 선택",
+    "select_connection_desc": "Docker 컨테이너를 보려면 연결을 선택하세요.",
+    "not_available": "Docker를 사용할 수 없음",
+    "not_available_desc": "Docker가 이 서버에 설치되지 않았거나 접근할 수 없습니다.",
+    "containers": "컨테이너",
+    "container_name": "이름",
+    "image": "이미지",
+    "status": "상태",
+    "ports": "포트",
+    "created": "생성일",
+    "actions": "작업",
+    "total_containers": "전체 컨테이너",
+    "running": "실행 중",
+    "stopped": "중지됨",
+    "start": "시작",
+    "stop": "중지",
+    "restart": "재시작",
+    "remove": "삭제",
+    "start_success": "컨테이너가 시작되었습니다",
+    "stop_success": "컨테이너가 중지되었습니다",
+    "restart_success": "컨테이너가 재시작되었습니다",
+    "remove_success": "컨테이너가 삭제되었습니다",
+    "start_error": "컨테이너 시작 오류: {{message}}",
+    "stop_error": "컨테이너 중지 오류: {{message}}",
+    "restart_error": "컨테이너 재시작 오류: {{message}}",
+    "remove_error": "컨테이너 삭제 오류: {{message}}",
+    "remove_confirm_title": "컨테이너 삭제",
+    "remove_confirm_content": "컨테이너 \"{{name}}\"\uc744(를) 삭제하시겠습니까?",
+    "loading_containers": "컨테이너 로딩 중...",
+    "no_containers": "컨테이너를 찾을 수 없음",
+    "load_error": "컨테이너 로딩 오류",
+    "images": "이미지",
+    "total_images": "전체 이미지",
+    "repository": "저장소",
+    "tag": "태그",
+    "image_id": "이미지 ID",
+    "size": "크기",
+    "loading_images": "이미지 로딩 중...",
+    "no_images": "이미지를 찾을 수 없음",
+    "images_load_error": "이미지 로딩 오류",
+    "image_remove_success": "이미지가 삭제되었습니다",
+    "image_remove_error": "이미지 삭제 오류: {{message}}",
+    "image_remove_confirm_title": "이미지 삭제",
+    "image_remove_confirm_content": "이미지 \"{{name}}\"를 삭제하시겠습니까?",
+    "logs": "로그",
+    "logs_title": "로그 - {{name}}",
+    "logs_loading": "로그 로딩 중...",
+    "logs_empty": "로그가 없습니다",
+    "logs_error": "로그 로딩 오류"
   }
 }
