--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -40,7 +40,8 @@
     "search": "Buscar",
     "no_results": "Nenhum resultado encontrado",
     "error_loading_snippets": "Erro ao carregar snippets",
-    "deleted_success": "Excluído com sucesso"
+    "deleted_success": "Excluído com sucesso",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "Iniciando...",
@@ -231,5 +232,56 @@
     "snippet_updated": "Snippet atualizado com sucesso",
     "snippet_created": "Snippet criado com sucesso",
     "executing": "Executando snippet: {{name}}"
+  },
+  "docker": {
+    "select_connection": "Selecione uma conexão",
+    "select_connection_desc": "Selecione uma conexão para visualizar os containers Docker.",
+    "not_available": "Docker não disponível",
+    "not_available_desc": "O Docker não está instalado ou não está acessível neste servidor.",
+    "containers": "Containers",
+    "container_name": "Nome",
+    "image": "Imagem",
+    "status": "Status",
+    "ports": "Portas",
+    "created": "Criado em",
+    "actions": "Ações",
+    "total_containers": "Total de Containers",
+    "running": "Em Execução",
+    "stopped": "Parados",
+    "start": "Iniciar",
+    "stop": "Parar",
+    "restart": "Reiniciar",
+    "remove": "Remover",
+    "start_success": "Container iniciado com sucesso",
+    "stop_success": "Container parado com sucesso",
+    "restart_success": "Container reiniciado com sucesso",
+    "remove_success": "Container removido com sucesso",
+    "start_error": "Erro ao iniciar container: {{message}}",
+    "stop_error": "Erro ao parar container: {{message}}",
+    "restart_error": "Erro ao reiniciar container: {{message}}",
+    "remove_error": "Erro ao remover container: {{message}}",
+    "remove_confirm_title": "Remover Container",
+    "remove_confirm_content": "Tem certeza que deseja remover o container \"{{name}}\"?",
+    "loading_containers": "Carregando containers...",
+    "no_containers": "Nenhum container encontrado",
+    "load_error": "Erro ao carregar containers",
+    "images": "Imagens",
+    "total_images": "Total de Imagens",
+    "repository": "Repositório",
+    "tag": "Tag",
+    "image_id": "ID da Imagem",
+    "size": "Tamanho",
+    "loading_images": "Carregando imagens...",
+    "no_images": "Nenhuma imagem encontrada",
+    "images_load_error": "Erro ao carregar imagens",
+    "image_remove_success": "Imagem removida com sucesso",
+    "image_remove_error": "Erro ao remover imagem: {{message}}",
+    "image_remove_confirm_title": "Remover Imagem",
+    "image_remove_confirm_content": "Tem certeza que deseja remover a imagem \"{{name}}\"?",
+    "logs": "Logs",
+    "logs_title": "Logs - {{name}}",
+    "logs_loading": "Carregando logs...",
+    "logs_empty": "Nenhum log disponível",
+    "logs_error": "Erro ao carregar logs"
   }
 }
