--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -35,7 +35,8 @@
     "edit": "编辑",
     "delete": "删除",
     "delete_connection": "删除连接",
-    "confirm_delete_connection": "确定要删除连接\"{{name}}\"吗？"
+    "confirm_delete_connection": "确定要删除连接\"{{name}}\"吗？",
+    "docker": "Docker"
   },
   "splash": {
     "starting": "启动中...",
@@ -222,5 +223,56 @@
     "save_tip": "提示：使用 Ctrl+Enter 快速保存",
     "snippet_updated": "代码片段更新成功",
     "snippet_created": "代码片段创建成功"
+  },
+  "docker": {
+    "select_connection": "选择连接",
+    "select_connection_desc": "选择连接以查看 Docker 容器。",
+    "not_available": "Docker 不可用",
+    "not_available_desc": "Docker 未在此服务器上安装或无法访问。",
+    "containers": "容器",
+    "container_name": "名称",
+    "image": "镜像",
+    "status": "状态",
+    "ports": "端口",
+    "created": "创建时间",
+    "actions": "操作",
+    "total_containers": "容器总数",
+    "running": "运行中",
+    "stopped": "已停止",
+    "start": "启动",
+    "stop": "停止",
+    "restart": "重启",
+    "remove": "删除",
+    "start_success": "容器启动成功",
+    "stop_success": "容器停止成功",
+    "restart_success": "容器重启成功",
+    "remove_success": "容器删除成功",
+    "start_error": "启动容器错误：{{message}}",
+    "stop_error": "停止容器错误：{{message}}",
+    "restart_error": "重启容器错误：{{message}}",
+    "remove_error": "删除容器错误：{{message}}",
+    "remove_confirm_title": "删除容器",
+    "remove_confirm_content": "确定要删除容器\"{{name}}\"吗？",
+    "loading_containers": "加载容器中...",
+    "no_containers": "未找到容器",
+    "load_error": "加载容器错误",
+    "images": "镜像",
+    "total_images": "镜像总数",
+    "repository": "仓库",
+    "tag": "标签",
+    "image_id": "镜像ID",
+    "size": "大小",
+    "loading_images": "加载镜像中...",
+    "no_images": "未找到镜像",
+    "images_load_error": "加载镜像错误",
+    "image_remove_success": "镜像删除成功",
+    "image_remove_error": "删除镜像错误：{{message}}",
+    "image_remove_confirm_title": "删除镜像",
+    "image_remove_confirm_content": "确定要删除镜像\"{{name}}\"吗？",
+    "logs": "日志",
+    "logs_title": "日志 - {{name}}",
+    "logs_loading": "加载日志中...",
+    "logs_empty": "暂无日志",
+    "logs_error": "加载日志错误"
   }
 }
