volumes and net

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -273,6 +273,29 @@
     "logs_title": "Protokolle - {{name}}",
     "logs_loading": "Protokolle werden geladen...",
     "logs_empty": "Keine Protokolle verfügbar",
-    "logs_error": "Fehler beim Laden der Protokolle"
+    "logs_error": "Fehler beim Laden der Protokolle",
+    "volumes": "Volumes",
+    "volume_name": "Volume-Name",
+    "driver": "Treiber",
+    "mountpoint": "Einhängepunkt",
+    "loading_volumes": "Volumes werden geladen...",
+    "no_volumes": "Keine Volumes gefunden",
+    "volumes_load_error": "Fehler beim Laden der Volumes",
+    "networks": "Netzwerke",
+    "network_name": "Netzwerkname",
+    "network_id": "Netzwerk-ID",
+    "scope": "Bereich",
+    "loading_networks": "Netzwerke werden geladen...",
+    "no_networks": "Keine Netzwerke gefunden",
+    "networks_load_error": "Fehler beim Laden der Netzwerke",
+    "tags": "Tags",
+    "unused": "Unbenutzt",
+    "search_images": "Suchen...",
+    "no_images_match": "Keine Images gefunden",
+    "remove_selected_confirm": "Ausgewählte Images entfernen?",
+    "remove_selected_count": "{{count}} Image(s) werden entfernt",
+    "images_removed_count": "{{count}} Image(s) erfolgreich entfernt",
+    "images_remove_errors": "{{count}} Image(s) konnten nicht entfernt werden",
+    "items_range": "{{start}}-{{end}} von {{total}} Elementen"
   }
 }
