--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -282,6 +282,29 @@
     "logs_title": "Logs - {{name}}",
     "logs_loading": "Loading logs...",
     "logs_empty": "No logs available",
-    "logs_error": "Error loading logs"
+    "logs_error": "Error loading logs",
+    "volumes": "Volumes",
+    "volume_name": "Volume Name",
+    "driver": "Driver",
+    "mountpoint": "Mount Point",
+    "loading_volumes": "Loading volumes...",
+    "no_volumes": "No volumes found",
+    "volumes_load_error": "Error loading volumes",
+    "networks": "Networks",
+    "network_name": "Network Name",
+    "network_id": "Network ID",
+    "scope": "Scope",
+    "loading_networks": "Loading networks...",
+    "no_networks": "No networks found",
+    "networks_load_error": "Error loading networks",
+    "tags": "Tags",
+    "unused": "Unused",
+    "search_images": "Search...",
+    "no_images_match": "No images match your search",
+    "remove_selected_confirm": "Remove selected images?",
+    "remove_selected_count": "{{count}} image(s) will be removed",
+    "images_removed_count": "{{count}} image(s) removed successfully",
+    "images_remove_errors": "{{count}} image(s) failed to remove",
+    "items_range": "{{start}}-{{end}} of {{total}} items"
   }
 }
