--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -279,6 +279,29 @@
     "logs_title": "Registros - {{name}}",
     "logs_loading": "Cargando registros...",
     "logs_empty": "No hay registros disponibles",
-    "logs_error": "Error al cargar registros"
+    "logs_error": "Error al cargar registros",
+    "volumes": "Volúmenes",
+    "volume_name": "Nombre del Volumen",
+    "driver": "Controlador",
+    "mountpoint": "Punto de Montaje",
+    "loading_volumes": "Cargando volúmenes...",
+    "no_volumes": "No se encontraron volúmenes",
+    "volumes_load_error": "Error al cargar volúmenes",
+    "networks": "Redes",
+    "network_name": "Nombre de Red",
+    "network_id": "ID de Red",
+    "scope": "Ámbito",
+    "loading_networks": "Cargando redes...",
+    "no_networks": "No se encontraron redes",
+    "networks_load_error": "Error al cargar redes",
+    "tags": "Etiquetas",
+    "unused": "Sin usar",
+    "search_images": "Buscar...",
+    "no_images_match": "No hay imágenes que coincidan",
+    "remove_selected_confirm": "¿Eliminar imágenes seleccionadas?",
+    "remove_selected_count": "Se eliminarán {{count}} imagen(es)",
+    "images_removed_count": "{{count}} imagen(es) eliminadas correctamente",
+    "images_remove_errors": "{{count}} imagen(es) fallaron al eliminar",
+    "items_range": "{{start}}-{{end}} de {{total}} elementos"
   }
 }
