--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -273,6 +273,29 @@
     "logs_title": "Journaux - {{name}}",
     "logs_loading": "Chargement des journaux...",
     "logs_empty": "Aucun journal disponible",
-    "logs_error": "Erreur lors du chargement des journaux"
+    "logs_error": "Erreur lors du chargement des journaux",
+    "volumes": "Volumes",
+    "volume_name": "Nom du Volume",
+    "driver": "Pilote",
+    "mountpoint": "Point de Montage",
+    "loading_volumes": "Chargement des volumes...",
+    "no_volumes": "Aucun volume trouvé",
+    "volumes_load_error": "Erreur lors du chargement des volumes",
+    "networks": "Réseaux",
+    "network_name": "Nom du Réseau",
+    "network_id": "ID du Réseau",
+    "scope": "Portée",
+    "loading_networks": "Chargement des réseaux...",
+    "no_networks": "Aucun réseau trouvé",
+    "networks_load_error": "Erreur lors du chargement des réseaux",
+    "tags": "Tags",
+    "unused": "Non utilisé",
+    "search_images": "Rechercher...",
+    "no_images_match": "Aucune image ne correspond",
+    "remove_selected_confirm": "Supprimer les images sélectionnées ?",
+    "remove_selected_count": "{{count}} image(s) seront supprimées",
+    "images_removed_count": "{{count}} image(s) supprimées avec succès",
+    "images_remove_errors": "{{count}} image(s) n'ont pas pu être supprimées",
+    "items_range": "{{start}}-{{end}} sur {{total}} éléments"
   }
 }
