--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -273,6 +273,29 @@
     "logs_title": "Log - {{name}}",
     "logs_loading": "Caricamento log...",
     "logs_empty": "Nessun log disponibile",
-    "logs_error": "Errore nel caricamento dei log"
+    "logs_error": "Errore nel caricamento dei log",
+    "volumes": "Volumi",
+    "volume_name": "Nome Volume",
+    "driver": "Driver",
+    "mountpoint": "Punto di Montaggio",
+    "loading_volumes": "Caricamento volumi...",
+    "no_volumes": "Nessun volume trovato",
+    "volumes_load_error": "Errore nel caricamento dei volumi",
+    "networks": "Reti",
+    "network_name": "Nome Rete",
+    "network_id": "ID Rete",
+    "scope": "Ambito",
+    "loading_networks": "Caricamento reti...",
+    "no_networks": "Nessuna rete trovata",
+    "networks_load_error": "Errore nel caricamento delle reti",
+    "tags": "Tag",
+    "unused": "Non utilizzata",
+    "search_images": "Cerca...",
+    "no_images_match": "Nessuna immagine corrisponde",
+    "remove_selected_confirm": "Rimuovere le immagini selezionate?",
+    "remove_selected_count": "{{count}} immagine/i verranno rimosse",
+    "images_removed_count": "{{count}} immagine/i rimosse con successo",
+    "images_remove_errors": "{{count}} immagine/i non sono state rimosse",
+    "items_range": "{{start}}-{{end}} di {{total}} elementi"
   }
 }
