--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -273,6 +273,29 @@
     "logs_title": "ログ - {{name}}",
     "logs_loading": "ログを読み込み中...",
     "logs_empty": "ログがありません",
-    "logs_error": "ログの読み込みエラー"
+    "logs_error": "ログの読み込みエラー",
+    "volumes": "ボリューム",
+    "volume_name": "ボリューム名",
+    "driver": "ドライバー",
+    "mountpoint": "マウントポイント",
+    "loading_volumes": "ボリュームを読み込み中...",
+    "no_volumes": "ボリュームが見つかりません",
+    "volumes_load_error": "ボリュームの読み込みエラー",
+    "networks": "ネットワーク",
+    "network_name": "ネットワーク名",
+    "network_id": "ネットワークID",
+    "scope": "スコープ",
+    "loading_networks": "ネットワークを読み込み中...",
+    "no_networks": "ネットワークが見つかりません",
+    "networks_load_error": "ネットワークの読み込みエラー",
+    "tags": "タグ",
+    "unused": "未使用",
+    "search_images": "検索...",
+    "no_images_match": "一致するイメージがありません",
+    "remove_selected_confirm": "選択したイメージを削除しますか？",
+    "remove_selected_count": "{{count}}個のイメージが削除されます",
+    "images_removed_count": "{{count}}個のイメージを削除しました",
+    "images_remove_errors": "{{count}}個のイメージの削除に失敗しました",
+    "items_range": "{{start}}-{{end}} / {{total}}件"
   }
 }
