--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -273,6 +273,29 @@
     "logs_title": "로그 - {{name}}",
     "logs_loading": "로그 로딩 중...",
     "logs_empty": "로그가 없습니다",
-    "logs_error": "로그 로딩 오류"
+    "logs_error": "로그 로딩 오류",
+    "volumes": "볼륨",
+    "volume_name": "볼륨 이름",
+    "driver": "드라이버",
+    "mountpoint": "마운트 포인트",
+    "loading_volumes": "볼륨 로딩 중...",
+    "no_volumes": "볼륨을 찾을 수 없음",
+    "volumes_load_error": "볼륨 로딩 오류",
+    "networks": "네트워크",
+    "network_name": "네트워크 이름",
+    "network_id": "네트워크 ID",
+    "scope": "범위",
+    "loading_networks": "네트워크 로딩 중...",
+    "no_networks": "네트워크를 찾을 수 없음",
+    "networks_load_error": "네트워크 로딩 오류",
+    "tags": "태그",
+    "unused": "미사용",
+    "search_images": "검색...",
+    "no_images_match": "일치하는 이미지가 없습니다",
+    "remove_selected_confirm": "선택한 이미지를 삭제하시겠습니까?",
+    "remove_selected_count": "{{count}}개의 이미지가 삭제됩니다",
+    "images_removed_count": "{{count}}개의 이미지가 삭제되었습니다",
+    "images_remove_errors": "{{count}}개의 이미지 삭제 실패",
+    "items_range": "{{start}}-{{end}} / {{total}}개"
   }
 }
