--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -282,6 +282,29 @@
     "logs_title": "Logs - {{name}}",
     "logs_loading": "Carregando logs...",
     "logs_empty": "Nenhum log disponível",
-    "logs_error": "Erro ao carregar logs"
+    "logs_error": "Erro ao carregar logs",
+    "volumes": "Volumes",
+    "volume_name": "Nome do Volume",
+    "driver": "Driver",
+    "mountpoint": "Ponto de Montagem",
+    "loading_volumes": "Carregando volumes...",
+    "no_volumes": "Nenhum volume encontrado",
+    "volumes_load_error": "Erro ao carregar volumes",
+    "networks": "Redes",
+    "network_name": "Nome da Rede",
+    "network_id": "ID da Rede",
+    "scope": "Escopo",
+    "loading_networks": "Carregando redes...",
+    "no_networks": "Nenhuma rede encontrada",
+    "networks_load_error": "Erro ao carregar redes",
+    "tags": "Tags",
+    "unused": "Não utilizada",
+    "search_images": "Buscar...",
+    "no_images_match": "Nenhuma imagem corresponde à busca",
+    "remove_selected_confirm": "Remover imagens selecionadas?",
+    "remove_selected_count": "{{count}} imagem(s) serão removidas",
+    "images_removed_count": "{{count}} imagem(s) removidas com sucesso",
+    "images_remove_errors": "{{count}} imagem(s) falharam ao remover",
+    "items_range": "{{start}}-{{end}} de {{total}} itens"
   }
 }
