--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -273,6 +273,29 @@
     "logs_title": "日志 - {{name}}",
     "logs_loading": "加载日志中...",
     "logs_empty": "暂无日志",
-    "logs_error": "加载日志错误"
+    "logs_error": "加载日志错误",
+    "volumes": "卷",
+    "volume_name": "卷名称",
+    "driver": "驱动",
+    "mountpoint": "挂载点",
+    "loading_volumes": "加载卷中...",
+    "no_volumes": "未找到卷",
+    "volumes_load_error": "加载卷错误",
+    "networks": "网络",
+    "network_name": "网络名称",
+    "network_id": "网络ID",
+    "scope": "范围",
+    "loading_networks": "加载网络中...",
+    "no_networks": "未找到网络",
+    "networks_load_error": "加载网络错误",
+    "tags": "标签",
+    "unused": "未使用",
+    "search_images": "搜索...",
+    "no_images_match": "没有匹配的镜像",
+    "remove_selected_confirm": "删除选中的镜像？",
+    "remove_selected_count": "将删除{{count}}个镜像",
+    "images_removed_count": "成功删除{{count}}个镜像",
+    "images_remove_errors": "{{count}}个镜像删除失败",
+    "items_range": "{{start}}-{{end}} / 共{{total}}项"
   }
 }
